# fedge-svn

trunk/: .autoconf_trace  AUTHORS  ChangeLog  Doxyfile  Makefile  Makefile.in  README  VERSION  acinclude.m4  config.h.in  config.status  configure  configure.in  configure.in.in  fedge.kdevelop  fedge.kdevelop.pcs  fedge.kdevses  fedge.lsm  fedge.spec  libtool  subdirs
trunk/admin/: Makefile  Makefile.in
trunk/autom4te.cache/: output.1  requests  traces.0  traces.1
trunk/doc/: Makefile  Makefile.am  Makefile.in
trunk/fedge/: Makefile  Makefile.am  Makefile.in  account.cpp  account.h  appopener.cpp  appopener.h  configaccounts.ui  configgeneraloptions.ui  deleter.cpp  deleter.h  deleter.moc.cpp  fedge.cpp  fedge.desktop  fedge.h  fedge.kcfg  fedgeballoon.cpp  fedgeballoon.h  fedgeconfig.kcfgc  fedgeconfigaccounts.cpp  fedgeconfigaccounts.h  fedgeconfigdialog.cpp  fedgeconfigdialog.h  fedgeselectdialog.cpp  fedgeselectdialog.h  fedgeui.rc  fetcher.cpp  fetcher.h  kmailaccount.cpp  kmailaccount.h  kmaildeleter.cpp  kmaildeleter.h  kmailfetcher.cpp  kmailfetcher.h  main.cpp  message.cpp  message.h  opener.h  pop3common.cpp  pop3common.h  (+4 more)
trunk/fedge/.deps/: configgeneraloptions.Uo  deleter.Uo  deleter.moc.Uo  fedge.Uo  fedge_client.Uo  fedgeballoon.Uo  fedgeconfig.Uo  fedgeiface_skel.Uo  fedgepref.Uo  fedgeview.Uo  fetcher.Uo  kmaildeleter.Uo  kmaildeleter.moc.Uo  kmailfetcher.Uo  main.Uo  message.Uo  pop3deleter.Uo  pop3deleter.moc.Uo  pop3fetcher.Uo  pop3fetcher.moc.Uo
trunk/fedge/pics/: Makefile  Makefile.am  Makefile.in
trunk/po/: Makefile
(+4 files in other folders)
